# CubeWorld_Clone

./: CMakeLists.txt  Default.xml  README.md  conanfile.txt
.github/workflows/: c-cpp.yml
data/shaders/: Shadows.incl  blinn_phong-param.json  blinn_phong.frag.glsl  blinn_phong.json  blinn_phong_tex.json  bloom-param.json  bloom.frag.glsl  bloom.json  blur.frag.glsl  blur.json  depth.frag.glsl  depth.json  depth.vert.glsl  hdr.frag.glsl  hdr.json  hdr.vert.glsl  light_accumulation.frag.glsl  light_accumulation.json  light_accumulation.vert.glsl  light_accumulation_tex-param.json  light_accumulation_tex.frag.glsl  light_accumulation_tex.json  light_bloom-param.json  light_bloom.frag.glsl  light_bloom.json  light_bloom.vert.glsl  particle_cpu.frag.glsl  particle_cpu.geom.glsl  particle_cpu.json  particle_cpu.vert.glsl  particle_cpu_tex-param.json  particle_cpu_tex.frag.glsl  particle_cpu_tex.geom.glsl  particle_cpu_tex.json  particle_cpu_texture.frag.glsl  particle_cpu_texture.geom.glsl  particle_cpu_texture.json  particle_cpu_texture.vert.glsl  point_depth.frag.glsl  point_depth.geom.glsl  (+12 more)
include/: Engine.h  GameObject.h  GameScene.h  Log.h  Platform.h
include/Assets/: AssetsFactory.h  AssetsManager.h  IAsset.h  IBinarySerialize.h  ISerialize.h  Prefab.h
include/Components/: Camera.h  Components.h  LightSource.h  Material.h  MaterialComponent.h  MeshComponent.h  ParticleSystem.h  Transform.h
include/ECS/: API.h  Component.h  ComponentManager.h  ECS.h  Engine.h  Entity.h  EntityManager.h  IComponent.h  IEntity.h  ISystem.h  System.h  SystemManager.h
include/ECS/Event/: Event.h  EventDelegate.h  EventDispatcher.h  EventHandler.h  IEvent.h  IEventDispatcher.h  IEventListener.h
include/ECS/Serialization/: ComponentFactory.h
include/ECS/util/: FamilyTypeID.h  Handle.h  Timer.h
include/Editor/: CacheSystem.h  Editor.h
include/Editor/Commands/: CommandList.h  EntityValidator.h  ICommand.h  SceneEditorCommands.h  SceneViewCommands.h  ViewersCommands.h
include/Editor/ImGui/: ImColorGradient.h  ImCurve.h  ImCustom.h  imgui_color_gradient.h  imgui_curve.h  imgui_custom.h  imgui_dock.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
include/Editor/Render/: EditorRender.h  LinesMesh.h
include/Editor/Resources/: AssetsWriter.h  ConfigManager.h  ModelImporter.h  TextureImporter.h
include/Editor/UI/: AssetsEditor.h  AssetsViewer.h  EditorViewer.h  GameWindow.h  IEditorWindow.h  IMenuEntry.h  LightingWindow.h  LogViewer.h  MenuBar.h  SceneEditor.h  SceneViewer.h
include/Editor/UI/Viewers/: AssetViewersRegister.h  CameraViewer.h  IAssetViewer.h  IViewer.h  LightViewer.h  MaterialAssetViewer.h  MaterialViewer.h  MeshViewer.h  ParticleViewer.h  TransformViewer.h  ViewersRegister.h
include/Memory/: GlobalMemoryUser.h  MemoryManager.h
include/Memory/Allocator/: IAllocator.h  LinearAllocator.h  ListLinearAllocator.h  MemoryChunkAllocator.h  PoolAllocator.h  StackAllocator.h
include/Render/: ForwardPlusPipeline.h  GLUtils.h  IRenderPipeline.h  Lighting.h  Mesh.h  ParticleRender.h  Render.h  SSBO.h  Shader.h  ShadowsManager.h  Texture.h
include/Systems/: ParticleWorker.h  RenderSystem.h
include/Utils/: Curve.h  Gradient.h  Math.h  Mathf.h  Primitives.h  ShaderPackager.h  ShaderUtils.h  json.h
src/: Engine.cpp  GameObject.cpp  GameScene.cpp  Log.cpp  main.cpp
src/Assets/: AssetsManager.cpp  Prefab.cpp
src/Components/: Camera.cpp  LightSource.cpp  Material.cpp  MaterialComponent.cpp  ParticleSystem.cpp  Transform.cpp
src/ECS/: API.cpp  ComponentManager.cpp  Engine.cpp  EntityManager.cpp  IComponent.cpp  IEntity.cpp  ISystem.cpp  SystemManager.cpp
src/ECS/Event/: EventHandler.cpp  IEvent.cpp  IEventListener.cpp
src/ECS/util/: FamilyTypeID.cpp  Timer.cpp
src/Editor/: CacheSystem.cpp  Editor.cpp  main.cpp
src/Editor/Commands/: CommandList.cpp  EntityValidator.cpp  SceneEditorCommands.cpp  SceneViewCommands.cpp  ViewersCommands.cpp
src/Editor/ImGui/: ImColorGradient.cpp  ImCurve.cpp  ImCustom.cpp  ImFileDialog.cpp  ImGuizmo.cpp  imgui_color_gradient.cpp  imgui_curve.cpp  imgui_custom.cpp  imgui_dock.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/Editor/Render/: EditorRender.cpp  LinesMesh.cpp
src/Editor/Resources/: AssetsWriter.cpp  ConfigManager.cpp  ModelImporter.cpp  TextureImporter.cpp
src/Editor/UI/: AssetsEditor.cpp  AssetsViewer.cpp  EditorViewer.cpp  GameWindow.cpp  IMenuEntry.cpp  LightingWindow.cpp  LogViewer.cpp  MenuBar.cpp  SceneEditor.cpp  SceneViewer.cpp
src/Editor/UI/Viewers/: CameraViewer.cpp  LightViewer.cpp  MaterialAssetViewer.cpp  MaterialViewer.cpp  MeshViewer.cpp  ParticleViewer.cpp  TransformViewer.cpp
src/Memory/: GlobalMemoryUser.cpp  MemoryManager.cpp
src/Memory/Allocator/: IAllocator.cpp  LinearAllocator.cpp  ListLinearAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
src/Render/: ForwardPlusPipeline.cpp  GLUtils.cpp  Mesh.cpp  ParticleRender.cpp  Render.cpp  Shader.cpp  ShadowsManager.cpp  Texture.cpp
src/Systems/: ParticleWorker.cpp  RenderSystem.cpp
src/Utils/: Curve.cpp  Gradient.cpp  Mathf.cpp  Primitives.cpp  ShaderPackager.cpp  ShaderUtils.cpp  json.cpp
tests/: ECSTests.h  test.cpp
